force-app/main/default/objects/Product2/fields/EstruturaProduto__c.field-meta.xml
<CustomField>
    <fullName>EstruturaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estrutura de Produto</label>
    <referenceTo>EstruturaProduto__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>