force-app/main/default/objects/Product2/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo para armazenar o Codigo Calculado automaticamente pelos Recursos atribuidos a este produto</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo para armazenar o Codigo Calculado automaticamente pelos Recursos atribuidos a este produto</inlineHelpText>
    <label>Codigo Interno (CPQ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>