force-app/main/default/objects/Product2/fields/Imagem_URL__c.field-meta.xml
<CustomField>
    <fullName>Imagem_URL__c</fullName>
    <defaultValue>&quot;https://c.na30.content.force.com/servlet/servlet.ImageServer?id=01536000002SKID&amp;oid=00D36000000Yc59&amp;lastMod=1479819637000&quot;</defaultValue>
    <label>Imagem URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>