force-app/main/default/objects/Product2/fields/KitAcessorios__c.field-meta.xml
<CustomField>
    <fullName>KitAcessorios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit de Acessórios</label>
    <referenceTo>KitAcessorios__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>