force-app/main/default/objects/Product2/fields/ProductCodeExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Código do produto (Id Externo)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>